@@ -46,6 +46,16 @@ name|BaseCompressingDocValuesFormatTestCase
 import|;
 end_import
 
+begin_import
+import|import
+name|org
+operator|.
+name|junit
+operator|.
+name|BeforeClass
+import|;
+end_import
+
 begin_comment
 comment|/**  * Tests Lucene42DocValuesFormat  */
 end_comment
@@ -68,6 +78,21 @@ operator|new
 name|Lucene42RWCodec
 argument_list|()
 decl_stmt|;
+annotation|@
+name|BeforeClass
+DECL|method|beforeClass
+specifier|public
+specifier|static
+name|void
+name|beforeClass
+parameter_list|()
+block|{
+name|OLD_FORMAT_IMPERSONATION_IS_ACTIVE
+operator|=
+literal|true
+expr_stmt|;
+comment|// explicitly instantiates ancient codec
+block|}
 annotation|@
 name|Override
 DECL|method|getCodec
