@@ -6857,6 +6857,11 @@ init|=
 name|newDirectory
 argument_list|()
 decl_stmt|;
+name|boolean
+name|oldValue
+init|=
+name|OLD_FORMAT_IMPERSONATION_IS_ACTIVE
+decl_stmt|;
 comment|// create a segment with an old Codec
 name|IndexWriterConfig
 name|conf
@@ -6890,6 +6895,10 @@ name|length
 argument_list|)
 index|]
 argument_list|)
+expr_stmt|;
+name|OLD_FORMAT_IMPERSONATION_IS_ACTIVE
+operator|=
+literal|true
 expr_stmt|;
 name|IndexWriter
 name|writer
@@ -7025,7 +7034,7 @@ finally|finally
 block|{
 name|OLD_FORMAT_IMPERSONATION_IS_ACTIVE
 operator|=
-literal|true
+name|oldValue
 expr_stmt|;
 block|}
 name|dir
