@@ -175,57 +175,6 @@ block|}
 block|}
 block|}
 decl_stmt|;
-DECL|field|infosFormat
-specifier|private
-specifier|final
-name|SegmentInfoFormat
-name|infosFormat
-init|=
-operator|new
-name|Lucene40SegmentInfoFormat
-argument_list|()
-block|{
-annotation|@
-name|Override
-specifier|public
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|codecs
-operator|.
-name|SegmentInfoWriter
-name|getSegmentInfoWriter
-parameter_list|()
-block|{
-if|if
-condition|(
-operator|!
-name|LuceneTestCase
-operator|.
-name|OLD_FORMAT_IMPERSONATION_IS_ACTIVE
-condition|)
-block|{
-return|return
-name|super
-operator|.
-name|getSegmentInfoWriter
-argument_list|()
-return|;
-block|}
-else|else
-block|{
-return|return
-operator|new
-name|Lucene40SegmentInfoWriter
-argument_list|()
-return|;
-block|}
-block|}
-block|}
-decl_stmt|;
 DECL|field|docValues
 specifier|private
 specifier|final
@@ -280,18 +229,6 @@ parameter_list|()
 block|{
 return|return
 name|norms
-return|;
-block|}
-annotation|@
-name|Override
-DECL|method|segmentInfoFormat
-specifier|public
-name|SegmentInfoFormat
-name|segmentInfoFormat
-parameter_list|()
-block|{
-return|return
-name|infosFormat
 return|;
 block|}
 block|}
