@@ -1088,6 +1088,13 @@ argument_list|)
 argument_list|)
 expr_stmt|;
 block|}
+comment|// set back to default
+name|LuceneTestCase
+operator|.
+name|OLD_FORMAT_IMPERSONATION_IS_ACTIVE
+operator|=
+literal|false
+expr_stmt|;
 name|savedCodec
 operator|=
 name|Codec
@@ -1156,6 +1163,12 @@ name|forName
 argument_list|(
 literal|"Lucene40"
 argument_list|)
+expr_stmt|;
+name|LuceneTestCase
+operator|.
+name|OLD_FORMAT_IMPERSONATION_IS_ACTIVE
+operator|=
+literal|true
 expr_stmt|;
 assert|assert
 name|codec
@@ -1232,6 +1245,12 @@ argument_list|(
 literal|"Lucene41"
 argument_list|)
 expr_stmt|;
+name|LuceneTestCase
+operator|.
+name|OLD_FORMAT_IMPERSONATION_IS_ACTIVE
+operator|=
+literal|true
+expr_stmt|;
 assert|assert
 name|codec
 operator|instanceof
@@ -1293,6 +1312,12 @@ argument_list|(
 literal|"Lucene42"
 argument_list|)
 expr_stmt|;
+name|LuceneTestCase
+operator|.
+name|OLD_FORMAT_IMPERSONATION_IS_ACTIVE
+operator|=
+literal|true
+expr_stmt|;
 assert|assert
 name|codec
 operator|instanceof
@@ -1353,6 +1378,12 @@ name|forName
 argument_list|(
 literal|"Lucene45"
 argument_list|)
+expr_stmt|;
+name|LuceneTestCase
+operator|.
+name|OLD_FORMAT_IMPERSONATION_IS_ACTIVE
+operator|=
+literal|true
 expr_stmt|;
 assert|assert
 name|codec
